fixed warnings IDEA